--- a/i18n/zh-cn.yaml
+++ b/i18n/zh-cn.yaml
@@ -61,7 +61,7 @@ search:
 
 footer:
     builtWith:
-        other: 使用 {{ .Generator }} 构建
+        other: Build with {{ .Generator }}
 
     designedBy:
-        other: 主题 {{ .Theme }} 由 {{ .DesignedBy }} 设计
+        other: "{{ .Theme }} designed by {{ .DesignedBy }}, modified by maybemia"
